<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/verify_pwd_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/login_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </LinearLayout>


        <Button
            android:id="@+id/bt_addAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addAccount"
            android:text="验证密码" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_pwd_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_password"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:id="@+id/pwd"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_password_again"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:id="@+id/pwd_again"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="setPwd"
            android:text="设置密码" />
    </LinearLayout>

</LinearLayout>